# tiycam-examples

./: LICENSE  README.md
board_libs/rv1126/: platform_libs.txt
board_libs/rv1126/include/: RgaApi.h  RgaSingleton.h  RgaUtils.h  RockchipRga.h  drmrga.h  im2d.h  im2d.hpp  rga.h  rkmedia_ai.h  rkmedia_api.h  rkmedia_buffer.h  rkmedia_common.h  rkmedia_muxer.h  rkmedia_venc.h  rknn_api.h
board_libs/rv1126/include/opencv2/: cvconfig.h
board_libs/rv1126/lib_chip/: libeasymedia.so.1  librga.so.2
examples/hello_ipk/: CMakeLists.txt
examples/hello_ipk/ipk/: pack_ipk.sh
examples/hello_ipk/ipk/Hello_RV1126_Linux/CONTROL/: control  postinst  prerm
examples/hello_ipk/ipk/Hello_RV1126_Linux/etc/init.d/: S100Hello_RV1126_Linux
examples/hello_ipk/src/: CMakeLists.txt  hello_world.cpp
ipkg_tool/: ipkg-build
lib/rv1126/jes_sdk/include/: jbuffer.h  jbus.h
lib/rv1126/jes_sdk/include/jes/: TLVParser.hpp  jalarm_define.h  jbase_define.h  jboard.h  jboard_config.h  jes_alarm.h  jes_bas.h  jes_cloudsee.h  jes_mcs.h  jes_mss.h  jes_network.h  jes_onvifserver.h  jes_ptz.h  jes_record.h  jes_recsnap.h  jes_replay.h  jes_spk.h  jes_storage.h  jes_user.h  jlang_define.h  jmedia_define.h  jmessage_define.h  jmss_define.h  jnetwork_define.h  jptz_define.h  jrecord_define.h  jtlvproto.h  juser_define.h  logset.h
lib/rv1126/jes_sdk/include/jlinux/: jlinux_gpio.h  jlinux_i2c.h  jlinux_mem.h  jlinux_pwm.h  jlinux_uart.h
lib/rv1126/jes_sdk/include/jvbase/: JCTLV.h  jlog.h  jtime.h  jvmediatypes.h  jvtlvtype.h  jvtypes.h
lib/rv1126/jes_sdk/lib/: libdbus-1.so.3  libjbuffer.so.1  libjbus.so.1.0.7  libjbus.so.1.0.8  libjbus.so.1.0.9
